--- a/client/index.html
+++ b/client/index.html
@@ -4,5 +4,11 @@
     <title>Build an image processing server</title>
   </head>
   <body>
+
+    <form enctype="multipart/form-data" method="POST"  action="/upload">
+      <input type="file" class="file-input" name="photo">
+      <input type="submit" class="submit-button" value="Submit" name="submit">
+    </form>
+
   </body>
 </html>
